# TopDeck

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ACCURACY_IMPROVEMENTS_SUMMARY.md  ACCURACY_PROJECT_COMPLETION.md  AKS_DEPENDENCY_ENHANCEMENT_SUMMARY.md  ANSWERING_ACCURACY_QUESTION.md  ANSWER_ML_PREDICTION_QUESTION.md  ARE_NEXT_PHASE_COMPLETION.md  AUTOMATED_DISCOVERY_SUMMARY.md  BEFORE_AFTER_COMPARISON.md  CHANGELOG.md  CHANGE_IMPACT_FIX_SUMMARY.md  CHANGE_IMPACT_IMPROVEMENTS.md  CHANGE_MANAGEMENT_SUMMARY.md  CLI_QUICK_REFERENCE.md  CODE_REVIEW_RESPONSE.md  CONTRIBUTING.md  CUSTOM_DASHBOARDS_IMPROVEMENTS_SUMMARY.md  DASHBOARD_ENHANCEMENTS_SUMMARY.md  DEPENDENCY_MAPPING_ENHANCEMENT_SUMMARY.md  DEPLOYMENT_READINESS.md  DEPLOY_TO_TEST.md  DEVELOPMENT.md  DOCKER_SETUP.md  DOCUMENTATION_UPDATE_SUMMARY.md  Dockerfile  ELASTICSEARCH_IMPLEMENTATION_SUMMARY.md  ENCRYPTION_IMPLEMENTATION_SUMMARY.md  ENHANCEMENTS_QUICKREF.md  ENHANCEMENTS_SUMMARY.md  ENHANCEMENT_SUMMARY.md  ENHANCEMENT_SUMMARY_ML_CONFIDENCE.md  ERROR_REPLAY_SUMMARY.md  FINAL_WORK_SUMMARY.md  FRONTEND_VISUALIZATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  ISSUE_DESCRIPTION.md  ISSUE_RESOLUTION_SUMMARY.md  (+54 more)
config/: tempo.yaml
docs/: ACCURACY_OPERATIONS_GUIDE.md  ACCURACY_QUICK_REF.md  ACCURACY_TRACKING_GUIDE.md  API_ENHANCEMENTS.md  APP_CHECK_ENHANCEMENTS.md  AUTOMATED_DISCOVERY.md  AZURE_RESOURCE_MAPPING.md  AZURE_TESTING_GUIDE.md  CHANGE_MANAGEMENT_GUIDE.md  CHANGE_MANAGEMENT_QUICK_REF.md  DEPENDENCY_VERIFICATION_QUICK_REF.md  ENHANCED_DEPENDENCY_ANALYSIS.md  ENHANCED_DEPENDENCY_MAPPING.md  ENHANCED_RISK_ANALYSIS.md  ENHANCED_RISK_ANALYSIS_QUICK_REF.md  ENHANCED_TOPOLOGY_QUICK_REF.md  ERROR_REPLAY_GUIDE.md  ERROR_REPLAY_QUICK_REF.md  HOSTING_AND_TESTING_GUIDE.md  HOW_TO_TEST_AZURE.md  IMPLEMENTATION_SUMMARY.md  LIVE_DIAGNOSTICS_ARCHITECTURE.md  LIVE_DIAGNOSTICS_GUIDE.md  LIVE_DIAGNOSTICS_QUICK_REF.md  LIVE_DIAGNOSTICS_WEBSOCKET.md  LOAD_CHANGE_DETECTION.md  LOAD_CHANGE_DETECTION_QUICK_REF.md  LOG_PLATFORM_SUPPORT.md  ML_CONFIDENCE_SCORING.md  ML_DATA_COMPATIBILITY_VERIFICATION.md  MODERN_DEMO_DATA.md  MULTI_CLOUD_CONFIGURATION.md  NEO4J_PERFORMANCE_GUIDE.md  NEO4J_PERFORMANCE_QUICK_REF.md  OBSERVABILITY.md  OPERATIONS_RUNBOOK.md  PDF_EXPORT_FUTURE_IMPROVEMENTS.md  PDF_EXPORT_GUIDE.md  PHASE_2_3_IMPLEMENTATION.md  PHASE_2_CONTINUATION.md  (+37 more)
examples/: README.md  change_impact_comparison.py  change_impact_comparison_standalone.py  confidence_scoring_demo.py  enhanced_dependency_demo.py  enhanced_topology_demo.py  error_replay_demo.py  github_integration_example.py  misconfiguration_demo.py  multi_cloud_discovery.py  multi_source_verification_demo.py  phase2_3_examples.py  phase3_parallel_cache_demo.py  prediction_example.py  reporting_example.py  risk_scoring_demo.py  simple_demo.py  validate_mappers.py
frontend/: .dockerignore  .env.example  Dockerfile  README.md  nginx.conf  package.json  playwright.config.ts
scripts/: README.md  README_NETWORK_GRAPH_DEMO.md  analyze_unmapped_resources.py  check_ado_config.py  create-github-issues.sh  demo_network_graph.py  demo_risk_analysis.py  e2e-test.sh  (+11 more)
(+400 files in other folders)
